--- a/frontend/i18n/en.json
+++ b/frontend/i18n/en.json
@@ -8,9 +8,16 @@
   "login": "Login",
   "register": "Register",
   "to_register": "Create Account",
-  "to_login": "Have an Account? Click here",
-  "lost_password": "Lost your password?",
+  "to_login": "Have an account? Click here",
+  "lost_password": "Forgot your password?",
   "user_email": "Username or Email Address",
   "password": "Password",
-  "remember_me": "Remember Me"
+  "remember_me": "Remember Me",
+  "first_name": "First Name",
+  "last_name": "Last Name",
+  "email": "Email Address",
+  "username": "Username",
+  "confirm_password": "Confirm Password",
+  "login_title": "Login",
+  "register_title": "Register"
 }
