--- a/frontend/i18n/pt.json
+++ b/frontend/i18n/pt.json
@@ -23,5 +23,10 @@
   "welcome-title-part1": "Seja o ",
   "welcome-title-part2": "MVP",
   "welcome-title-part3": " da Partida!",
-  "welcome-message": "Participe dos melhores bolões e mostre que você é o mestre dos palpites!"
+  "welcome-message": "Participe dos melhores bolões e mostre que você é o mestre dos palpites!",
+  "home": "Home",
+  "next_games": "Próximos jogos",
+  "my_pools": "Meus bolões",
+  "all_rights_reserved": "Todos direitos reservados para MVP Pitacos",
+  "prediction": "Faça seu próximo pitaco!"
 }
