Creating the New Pool Page

--- a/frontend/i18n/pt.json
+++ b/frontend/i18n/pt.json
@@ -10,7 +10,7 @@
   "to_register": "Criar Conta",
   "to_login": "Possui uma conta? Clique aqui",
   "lost_password": "Esqueceu sua senha?",
-  "user_email": "Username ou Endereço de Email",
+  "user_email": "Usuário ou Endereço de Email",
   "password": "Senha",
   "remember_me": "Lembre-se de Mim",
   "first_name": "Nome",
