Add de option to go to my leagues, not functionable yet, change how you select the language option with just a click, not opening a menu

--- a/frontend/i18n/en.json
+++ b/frontend/i18n/en.json
@@ -28,5 +28,6 @@
   "next_games": "Next Games",
   "my_pools": "My Pools",
   "all_rights_reserved": "All rights reserved for MVP Pitacos",
-  "prediction": "Make your next prediction!"
+  "prediction": "Make your next prediction!",
+  "my_league": "My leagues"
 }
