--- a/frontend/i18n/pt.json
+++ b/frontend/i18n/pt.json
@@ -28,5 +28,6 @@
   "next_games": "Próximos jogos",
   "my_pools": "Meus bolões",
   "all_rights_reserved": "Todos direitos reservados para MVP Pitacos",
-  "prediction": "Faça seu próximo pitaco!"
+  "prediction": "Faça seu próximo pitaco!",
+  "my_league": "Minhas ligas"
 }
